till 6 skazhite spasibo leonidu gorbunovu

--- a/ABSOLUTELY NEW CONSPECTY (3 sem)/mathanalys3.tex
+++ b/ABSOLUTELY NEW CONSPECTY (3 sem)/mathanalys3.tex
@@ -126,6 +126,7 @@
             \DeclareMathOperator{\Lin}{Lin}
             \DeclareMathOperator{\Prf}{Pr}
             \DeclareMathOperator{\Iso}{Iso}
+            \DeclareMathOperator{\diam}{diam}
 
         %specific_shit
             \DeclareMathOperator{\Tors}{Tors}
@@ -619,6 +620,425 @@ $\emptyset = A \cap (X \backslash A)$, $X= A \cup (X \backslash A)$, $A \backsla
 Пусть $c=\mu([0, 1))$. Тогда $\mu(a, b) = c(b-a)$. Действительно, если $b-a = \frac{p}{q} \in \QQ$, то $\mu(a, b) = \mu(0, \frac{p}{q}) = p \cdot \mu(0, \frac{1}{q})=\frac{c}{q}$. А если $b-a \notin \QQ$, то можно приблизить рациональными. Значит, на полуинтервалах меры $\lambda$ и $c \cdot \mu$ совпадают, а, значит, они совпадают везде, так как мера продолжается единственным образом.
 \end{itemize}
 \end{proof}
+
+
+\subsection{Измеримость.}
+ 
+На прошлой лекции у нас было множество $X$, в котором есть $\GA \subset 2^X$ - полукольцо, а также полуаддитивная мера $\mu : \GA \ra \overline{\RR_+}$, и мы научились 
+ 
+\begin{itemize}
+\item определить сигма-алгебру $\Sigma \subset \GA$ измеримых множеств относительно $\mu$; 
+\item продолжить меру до сигма-аддитивной на $\GA$; 
+\item доказывать единственность этого продолжения; 
+\item и если исходное $\mu|_{\GA}$ - $\sigma$-аддитивно, то продолжение совпадает с исходной на $\GA$. 
+\end{itemize}
+ 
+В дальнейшем будем использовать эти факты, обозначив тройку $(X, \Sigma, \mu)$ как \se{Пространство-мера}{пространство-мера}, причём обычно считают $\mu$ счётноаддитивной.
+ 
+\begin{defn}
+Пусть у нас есть $(X, \Sigma, \mu)$ и $(Y, \Delta, \nu)$. $f: X \ra Y$ \se{Измеримость}{измеримо}, если $\forall A \in \Delta$, $f^{-1}(A) \in \Sigma$. 
+\end{defn}
+ 
+\begin{exl}
+Пусть $X$, $Y$ - топологические пространства. Тогда там есть естественные $\sigma$-алгебры, «натянутые» на все открытые множества: $B(X)$, $B(Y)$ - Борелевские $\sigma$-алгебры. Тогда если $f: X \ra Y$ - непрерывно, то и измеримо по Борелю.
+\end{exl}
+ 
+Пусть у нас есть $(Y, \Delta, \mu)$ и множество $\GB \subset \Rho(Y)$. Расширение, наименьшая сигма-алгебра, которая это $\GB$ содержит - $\overline{\GB}$. Если она совпадает с $\Delta$, то $\GB$ - образующее множество в $\Delta$. Это множество можно и желательно выбирать как можно меньше.
+ 
+\begin{exl}
+Пусть $X = \RR^n$, $\Sigma = B(X)$, что можно выбрать поменьше? Можно рассмотреть \se{Диадическое разбиение}{диадические разбиения}, то есть, все такие кубики, вершины которых лежат в двоично-рациональных точках. То есть, набор кубиков, устроеный как
+ 
+\[
+[\frac{p_1}{2^k}, \frac{p_1+1}{2^k}) \times[\frac{p_2}{2^k}, \frac{p_2+1}{2^k}) \times ... \times [\frac{p_n}{2^k}, \frac{p_n+1}{2^k}).
+\]
+ 
+Обозначим это разбиение как $D$. Ясно, что любое открытое множество $G$ в $\RR^n$ представимо в виде объединения $G=\bigcup D_i$ кубиков из $D$. Как следствие, $D$ порождает Борелевскую $\sigma$-алгебру. При этом, если есть два кубика, то они либо не пересекаются, либо один находится внутри другого. Таким образом, можно считать, что все $D_i$ попарно дизъюнктны. 
+\end{exl}
+ 
+ 
+ 
+\begin{stat}
+Пусть $G_1$ и $G_2$ - области в $\RR^n$, и $f: G_1 \ra G_2$ - гомеоморфизм, и дополнительно $f \in Lip(G_1)$. Пусть также есть измеримое по Лебегу множество $B \subset \Sigma_\lambda$, $B\subset G_1$, тогда $f(B)$ тоже измеримо по Лебегу (Лебегово)
+\end{stat}
+ 
+\begin{proof}
+Воспользуемся тем, что $B$ имеет вид $\tilde{B} \backslash E$, где $\tilde{B} \in B(\RR^n)$, а  $\lambda(E)=0$. Тогда $f(B) = f(\tilde{B}) \backslash f(E)$. Уменьшаемое - борелевское, но тогда нужно доказать, что $\lambda(f(E)) = 0$, чтобы заключить, что $f(E)$ измеримо, а, значит, тогда и $f(B)$ будет измеримым. $\lambda(E) = 0$ $\iff $ внешняя мера множества $E$ равна нулю, т.е. существует набор диадических кубиков такой, что их объединение содержит $E$, а сумма объёмов этих кубиков меньше $\varepsilon$. Тогда $f(E) \subset \bigcup f(Q_j)$, а $\diam f(Q_j) \leq C(\diam Q_j)^n$ (где $Q_j$ - кубики, $C$ - константа липшицевости, делённая на $n$-ую степень отношения длины главной диагонали к стороне куба), а следовательно, $\lambda^*(f(E))\leq \Const \cdot \varepsilon$. То есть, если гомеоморфизм липшицев, то образ измеримого измерим.
+\end{proof}
+ 
+\subsection{Небольшое отступление.}
+ 
+Давайте для простоты рассмотрим $n=2$. Тогда если у нас есть $A$, покрываемое кубиками, то существует его покрытие кубиками такое, что сумма их площадей $\sum (diam Q_j)^2$ конечна. Если мы рассмотрим отрезок на плоскости, то ситуация аналогична, только $\diam$ не во второй степени а в первой. И если мы обратим особое внимание на эти показатели степени (отображающие размерность), то это приведёт нас к хаусдорфовой (дробной) размерности:  
+ 
+\begin{defn}
+Пусть $B \subset \RR^n$, $\{Q_j\}$. Мы выбираем показатели $s$ такие, что для любого $\varepsilon > 0$ можно выбрать семейство кубиков $\{Q_j\}$ со следующими свойствами:
+ 
+\begin{itemize}
+\item $B \subset \bigcup Q_j$.
+\item $diam Q_j < \varepsilon$
+\item $\sum (\diam Q_j)^s < \infty$.
+\end{itemize}
+ 
+Тогда $\inf\{s : \exists \:\text{такое разбиение}\} = \dim_H(B)$ - \se{Хаусдорфова размерность множества}{Хаусдорфова размерность} множества $B$. Более того, после того, как размерность определена, $s_0 = \dim_H(B)$, можно говорить о \se{Мера Хаусдорфа}{мере хаусдорфа}: $\mu_s(B) = \inf_{\text{по всем покрытиям } B} \{ \sum (diam Q_j)^{s_0} \}$.
+\end{defn}
+ 
+\subsection{Измеримые функции.}
+\begin{defn}
+Функция
+\[
+f: (X, \Sigma, \mu) \ra \RR \: (или \CC),
+\]
+называется \se{Измеримая по Лебегу функция}{измеримой по Лебегу}, если она
+измерима в вышеупомянутом смысле. 
+\end{defn}
+\begin{defn}
+Пусть $f: X \ra \RR$, тогда 
+\[
+E_a(f) = \{x \in X : f(x) < a\} 
+\]
+- множества Лебега.
+\end{defn}
+\begin{remark}
+Множества $\{x \in X : f(x) > a\}$, $\{x \in X : f(x) \geq a\}$ и $\{x \in X : f(x) \leq a\}$ также иногда называются множествами Лебега.
+\end{remark}
+\begin{stat}
+$f: X \ra \RR$ измеримо тогда и только тогда, когда $E_a(f) \in X$ для любого $a$. 
+\end{stat}
+\begin{proof}
+$[a, b) = E_b(f) \backslash E_a(f)$
+\end{proof}
+\begin{stat}
+Если у нас есть измеримые функции $f_1$ и $f_2$, то их сумма $f_1+f_2$ и произведение $f_1f_2$ тоже измеримы. Если $X$ - метрическое пространство, и $f_2$ непрерывна, то $\frac{f_1}{f_2}$ также измерима там, где знаменатель не обращается в ноль.
+\end{stat}
+\begin{proof}
+Рассмотрим комбинацию отображений: $X \ra \RR^2 \ra \RR$, устроеную следующим образом: $x \mapsto (f_1(x), f_2(x))$, $(x, y) \mapsto x+y$. Оба этих отображения измеримы. Сквозное отображение сопоставляет точке $x$ число $f_1(x)+f_2(x)$ и будет измеримым как композиция измеримых;
+\end{proof}
+\begin{stat}
+Пусть теперь $\{f_i\}_{i=1}^{\infty}$ - измеримые фукнции. Тогда их поточечный супремум $f(x)=\sup_{i} \{f_i(x)\}$ также измерим.
+\end{stat}
+\begin{proof}
+Выберем число $a \in \RR$ и посмотрим на $E_a(f)$. Хотим доказать, что $E_a(f)$ измеримо по Борелю.  
+Условие $x \in E_a(f)$ равносильно тому, что для любого $i$, $f_i(x) \leq a$, которое, в свою очередь, можно записать в виде $x \in \bigcap_i \{x | f_i(x) \leq a\}$. Значит, $E_a(f)$ в точности равно $ \bigcap_i \{x | f_i(x) \leq a\}$. Каждое из написанных в фигурных скобках множеств измеримо, значит, и $E_a(f)$ тоже измеримо.
+\end{proof}
+\begin{remark}
+Аналогично, измеримы фукнции $\inf_i \{f_i(x)\}$,  $\limsup{f_i(x)} = \inf_m \sup_{k>m} f_i(x)$ и $\lim_i f_i(x)$ (если существует).
+\end{remark}
+Если мы захотим рассматривать функции $f: X \ra [-\infty, \infty]$, то дополнительно в определении измеримости надо потребовать, чтобы $f^{-1}(\infty)$ и $f^{-1}(-\infty)$ были измеримы.
+ 
+\subsection{Интеграл Лебега и теоремы Леви}
+Пусть есть функция $f: X \ra \RR$.
+\begin{enumerate}
+    \item Разобъём её на положительную и отрицательную части: $f=f_-f_-$, где, напомним,  $f_+(x)=\max(f(x), 0)$ и $f_-(x)=-\min(f(x), 0)$ (заметим, что $f_+$ и $f_-$ - наотрицательные функци).
+    \item Если мы определим интеграл Лебега $I(f)$ для неотрицательных функций, то сможем определить и для произвольной функции $g=g_+-g_-$: $I(g)=I(g_+)-I(g_-)$ при условии, что хотя бы один из интегралов $I(g_+)$ и $I(g_-)$ меньше бесконечности. Если же оба интеграла равны бесконечности, то определить интеграл Лебега от функции $g$ мы не можем.
+    \item Таким образом, наша текущая цель - определить интеграл Лебега от неотрицательной измеримой функции $f: X \ra \RR$. Для этого мы будем пользоваться определёнными ранее простыми функциями.
+    
+    Пусть $f(x) = \sum_{k=1}^na_k \chi_{E_k}(x)$ - простая функция, $E_k$ - измеримые множества. Для неё мы уже определяли $I(f)=\sum_{k=1}^na_k\mu(E_k)$.
+    
+    \textbf{Идея:} Приблизить произвольную функцию простыми.
+\end{enumerate}
+ 
+\begin{theorem}
+(\se{Малая теорема Леви}{Малая теорема Леви})
+ 
+Даны неотрицательные простые функции $f$ и $\{g_i\}_{i=1}^{\infty}$. Также $g_i(x) \leq g_{i+1}(x)$, и для почти любого $x$ есть предел $\lim_{i \ra \infty} g_i(x) = f(x)$. Тогда $\lim_{i \ra \infty} I(g_i)=I(f)$
+\end{theorem}
+\begin{proof}
+ 
+ 
+Предположим для простоты, что мера конечна.
+ 
+$f(x)=\sum_{k=1}^n a_k\chi_{E_k}(x)$, где $E_k$ попарно дизъюнктны, а $g_i(x)=\sum_{j=1}^{n_i} b_j \chi_{\tilde{E_j}}(x)$. Для каждого $k \in [1, n]$ рассмотрим функцию $g_i \chi_{E_k}$. Она почти всюду сходится к $a_k \chi_{E_k}$ (при $i \ra \infty$).
+Докажем, что $I(\chi_{E_k}g_i) \ra I(a_k\chi_{E_k}) = a_k\mu(E_k)$.
+ 
+Во-первых, $I(\chi_{E_k}g_i)$ возрастает при $i \ra \infty$.
+ 
+Во-вторых, $I(\chi_{E_k}g_i) \leq I(a_k\chi_{E_k})$, а тогда $\lim_{i \ra \infty} I(\chi_{E_k}g_i) \leq I(a_k\chi_{E_k})=a_k\mu(E_k)$, поэтому дальше мы будм доказывать неравенство в другую сторону. Для этого докажем, что $\lim_{i \ra \infty} I(\chi_{E_k}g_i) \geq a_k\mu(E_k)-\epsilon$ для любого $\epsilon>0$.
+ 
+Для любого $\delta>0$ верно неравенство $I(\chi_{E_k}g_i) \geq (a_k-\delta)\mu\{x\in E_k: g_i > a_k-\delta \}$. Нужно доказать, что при достаточно больших $i$ (и фиксированных $\delta$ и $\epsilon$) $\mu\{x \in E_k: g_i > a_k-\delta\} \geq \mu(E_k)-\epsilon$ , потому что в этом случае на искомый интеграл получится оценка $(a_k-\delta)(\mu(E_k)-\epsilon)$.
+ 
+ 
+Но $\{x\in E_k : g_i(x)> a-\delta\} \subseteq \{x \in E_k: g_{i+1}(x)>a-\delta\}$, а их объединение $\bigcup_i \{x\in E_k : g_i(x)> a-\delta\}$ - это в точности множество тех точек $x$, где $\{g_i(x)\} \ra f(x)$. Значит, $\lim_{i \ra \infty} \mu\{x\in E_k : g_i(x)> a-\delta\} =\mu(E_k)$ 
+ 
+Выберем $n$ достаточно большим, чтобы $\mu(\{x \in E_k: g_n(x)>a_k-\delta\})>\mu(E_k)-\epsilon$, а это нам и требовалось.
+\end{proof}
+\begin{lemma}
+Дана неотрицательная измеримая функция $f$. Тогда существует последовательность неотрицательных простых функций $\{f_i\}$, почти всюду монотонно возрастающих (по $i$) к $f$.
+\end{lemma}
+\begin{proof}
+Для начала разберём случай, когда функция $f$ ограничена: $0 < f(x) < c$. Рассмотрим разбиение $[0, c] = \bigcup_{0 \leq i <c2^n } \underbrace{\left [ \frac{i}{2^n}, \frac{i+1}{2^n} \right ]}_{I^i_n}$, а также множества $E^{(n)}_i = \{x : f(x) \in I^i_n\}$. 
+ 
+Возьмём теперь простую функцию $f_n(x) = \sum_{i=1}^{c \cdot 2^n} \frac{i}{2^n} \chi_{E^{n}_i(x)}$. Говоря иначе, мы нарезали область значений функции $f$, и в каждой "полосочке" огрубили функцию вниз. Тогда понятно, что Последовательность $\{f_n\}$ монотонно возрастает к $f$.
+ 
+Если же функция $f$ не ограничена, то для любого $N$ разделим функцию на две области: там, где она меньше либо равна $N$ и там, где она больше, чем $N$. Первая область приближается как в предыдущем абзаце, а на второй области мы оценим функцию как $N \chi_{\text{эта область}}$. Опять-таки, с ростом $N$ получившаяся последовательность функций будет монотонно возрастать к $f$.
+\end{proof}
+\begin{defn}
+Дана неотрицательная измеримая функция $f: X \ra \RR$. Тогда величина $I(f):=\sup \{I(h), h - \text{простая функция, и } 0 \leq h \leq f\}$ называется \se{Интеграл Лебега}{интегралом Лебега}
+\end{defn}
+\begin{stat}
+\textbf{Свойства интеграла Лебега:}
+ 
+\begin{itemize}
+ 
+    \item \textbf{Монотонность:} Если $0 \leq f_1 \leq f_2$, то $I(f_1) \leq I(f_2)$
+    \item \textbf{Аддитивность с простой функцией: } $f$ - измеримая функция, и $0 \leq \phi \leq f$ - простая функция. Тогда $I(f)=I(f-\phi)+I(\phi)$.
+    \item \se{Неравенство Чебышёва}{Неравенство Чебышёва:} Даны неотрицательная измеримая функция $f$, вещественное число $a$ и соответствующее множество Лебега $E_a=\{x: f(x) \geq a\}$. Тогда $f \geq a \chi(E_a)$, и $I(f) \geq I(a \chi(E_a)) = a \cdot \mu\{x: f(x) \geq a\}$.
+\end{itemize}
+\end{stat}
+\begin{theorem}
+$f$ и $\{f_n\}$ - измеримые неотрицательные функции на пространстве с конечной мерой. Известно, что $\{f_n\}$ почти всюду монотонно возрастает к $f$. Тогда $I(f_n)$ монотонно возрастает к $I(f)$.
+\end{theorem}
+\begin{proof}
+Ясно, что предел $\lim_{n \ra \infty} I(f_n)$ существует и не превосходит $I(f)$. Как и раньше, будем доказывать, что для любого $\epsilon>0$ верно неравенство $\lim_{n \ra \infty} I(f_n) \geq I(f)-\epsilon$.
+ 
+Можно выбрать простую $h \leq f$ так, чтобы выполнялось неравенство $I(f)-\epsilon < I(h)$, поэтому будем доказывать, что $\lim_{n \ra \infty} I(f_n) \geq I(h)$.
+ 
+Для каждого $n$ обозначим через $h_n$ простую функцию, приближающую $f_n$ с погрешностью не более $\frac{1}{2^n}$: $I(f_n)-\frac{1}{2^n} \leq I(h_n)$ и $h_n \leq f_n$. Также пусть $\Tilde{h_n} = \max_{i \leq n}h_i$. Тогда $\Tilde{h_n} \leq f_n$ и $I(f_n)-\frac{1}{2^n} \leq I(\tilde{h_n}) \leq I(f)$, так как $h_i \leq f_i \leq f_n \leq f$.
+ 
+Заметим, что $\{\tilde{h_n}\}$ - возрастающая последовательность простых функций. Докажем, что она почти везде сходится к $f$.
+ 
+Множество точек, где $\tilde{h_n}$ не сходится к $f$ - это в точности $\bigcup_{\epsilon} \{x: \lim_{n \ra \infty} h_n(x)<f(x)-\epsilon\}$. Хотим показать, что это объединение имеет меру ноль.
+ 
+$f(x)-\tilde{h_n}(x) = (f(x)-f_n(x))+(f_n(x)-\tilde{h_n}(x))$. Если вдруг оказалось, что эта разность больше, чем $\epsilon$, то одна из скобок больше, чем $\frac{\epsilon}{2}$.
+ 
+$\mu\{x: |f(x)-f_n(x)|>\frac{\epsilon}{2}\} \ra 0$ при $n \ra \infty$ - это утверждение мы доказали в малой теореме Леви для простых функций, но на самом деле не пользовались их простотой.
+ 
+Чтобы оценить меру $\mu\{x: |f_n(x)-\tilde{h}_n(x)|>\frac{\epsilon}{2}\}$, применим неравенство Чебышёва: $\mu\{x: |f_n(x)-\tilde{h}_n(x)|>\frac{\epsilon}{2}\} \leq \frac{2}{\epsilon} I \left ( f_n(x)-\tilde{h}_n(x) \right ) \leq \frac{2}{\epsilon 2^n} \ra 0$ при $n \ra \infty$.
+ 
+Значит, мера множества точек, где $\tilde{h}_n$ не стремится к $f$, равна нулю.
+ 
+Чтобы завершить доказательство, рассмотрим простые функции $g_n=\min\{\tilde{h}_n, h\}$. Они почти везде монотонно возрастают к $h$, потому что $\tilde{h}_n$ почти везде возрастает к $f$, а $f \geq h$. Тогда по малой теореме Леви $I(g_n)$ монотонно возрастает к $I(h)$. Имеем неравенство $I(f_n) \geq I(\tilde{h}_n)-\frac{1}{2^n} \geq I(g_n)-\frac{1}{2^n}$. Переходя к пределу по $n$, получаем, что $\lim_{n \ra \infty} I(f_n) \geq \lim_{n \ra \infty} I(g_n) = I(h) \geq I(f)-\epsilon$ - мы воспользовались малой теоремой Леви.
+\end{proof}
+\textbf{Схема доказательства: }
+\begin{enumerate}
+    \item Доказать в тривиальную сторону
+    \item Ослабить (с помощью $\epsilon$) и заменить $f$ на простую функцию $h$
+    \item Заменить $f_n$ на простые $h_n$, чтобы они хорошо приближали интеграл.
+    \item (\textbf{Типичная идея}) Огранизовать монотонную последовательность: $\tilde{h}_n = \max_{1 \leq i \leq n} h_i$
+    \item Доказать, что $\tilde{h}_n$ монотонно возрастают к $f$
+    \item Доказать, что $\min\{\tilde{h}_n, h\}$ монотонно возрастают к $h$
+    \item Предельный переход по простым функциям с помощью малой теоремы Леви
+\end{enumerate}
+\begin{stat}
+\textbf{Продолжение свойств интеграла Лебега для положительных функций:}
+\begin{itemize}
+    \item Интеграл Лебега от функции $f$ можно определить не как супремум по всем простым функция, а как предел интеграла простых функций, стремящихся к $f$
+    \item \textbf{Линейность:} Если $f_1$, $f_2$ - измеримые неотрицательные, то $I(f_1+f_2)=I(f_1)+I(f_2)$
+    \item Если $I(f)=0$, то $f=0$ почти везде.
+\end{itemize}
+\end{stat}
+\begin{proof}
+\
+\begin{itemize}
+    \item Следствие теоремы Леви
+    \item Пусть $\{\phi^1_n\}$ приближает $f_1$, $\{\phi^2_n\}$ приближает $f_2$, тогда $\{\phi^1_n+\phi^2_n\}$ приближает $f_1+f_2$
+    \item $\{x: f(x)>0\} = \bigcup_{\epsilon} \{x: f(x)>\epsilon\}$, а по неравенству Чебышёва $\mu\{x: f(x)>\epsilon\} \leq \frac{1}{\epsilon}I(f)=0$ 
+\end{itemize}
+\end{proof}
+\begin{defn}
+Множество $E$ называется \se{$\sigma$-конечное множество}{$\sigma$-конечным}, если оно представляется в виде счётного объединения множеств конечной меры.
+\end{defn}
+\begin{stat}
+Пусть $f \geq 0$ - измерима, $I(f) < \infty$. Тогда её носитель $\supp(f) = \{x : f(x) \neq 0\}$ - $\sigma$-конечное множество.
+\end{stat}
+\begin{proof}
+$\supp(f) = \bigcup_{\epsilon} \{x : f(x) \geq  \epsilon\}$, и по неравенству Чебышёва $\{x : f(x) \geq  \epsilon\} \leq \frac{1}{\epsilon}I(f) < \infty$.
+\end{proof}
+ 
+\subsection{Интеграл как функция множеств}
+Пусть задана измеримая функция $f \geq 0$. Для любого измеримого множества $E \in \Sigma$ можно рассмотреть функцию от множества $E$, определённую по правилу $I(f, E) = I(f \cdot \chi_E)$
+\\
+\begin{theorem}
+Дана последовательность вложенных друг в друга множеств $\{E_i\}$, $E_{i+1} \subseteq E_i$, $\mu\{E_1\} < \infty$, $O(f, E_1)<\infty$ и $E=\bigcap_i E_i$. Тогда $$I(f, E) = \lim_{i \ra \infty} I(f, E_i)$$
+\end{theorem}
+\begin{proof}
+Нам надо доказать, что $I(f \cdot \chi_E) = \lim_{i \ra \infty} I(f \cdot \chi_{E_i})$. Хочется применить теорему Леви о монотонной сходимости, но вот незадача: функции монотонно убюывают, а нам нужно возрастание. Для этого мы каждое множество $E_i$ заменяем на $F_i = E_1 \backslash E_i$, тогда $I(f, F_i) = I(f, E_1)-I(f, E_i)$, и можно применять теорему Леви.
+\end{proof}
+\subsection{Другие предельные переходы под знаком интеграла}
+Теорема Леви говорит нам, что если $f_n \nearrow f$, то $I(f_n) \nearrow I(f)$ (какой классный символ, почему я не узнал о его существовании раньше и писал слова <<монотонно возрастает к>>?). Но что, если последовательность $f_n$ вообще не имеет предела?
+\begin{defn}
+Далее мы будем обозначать $I(f) $ через $\int f d\mu$
+\end{defn}
+\begin{theorem}
+\se{Лемма Фату}{Лемма Фату} Пусть $\{f_n\}$ - последовательность неотрицательных измеримых функций. Тогда $$\liminf_{n \ra \infty} \int f_n d \mu \geq \int \liminf_{n \ra \infty} f_n d \mu$$
+\end{theorem}
+\begin{proof}
+$\liminf_{n \ra \infty} f_n(x) = \sup_{n}\underbrace{ \inf_{k \geq  n} f_k(x)}_{g_n(x)} $. Когда $n$ возрастает, то инфимум берётся по всё меньшему множеству, и поэтому $g_n$ становится всё больше. Значит, $g_n(x)$ возрастает, и по теореме Леви $\int \liminf_{n \ra \infty} f_n d\mu =\int \lim_{n \ra \infty} g_n d\mu = \lim_{n \ra \infty} \int g_n d \mu$, что не больше, чем $\liminf_{n \ra \infty} \int f_n d \mu$
+\end{proof}
+\begin{defn}
+\textbf{Окончательное определение интеграла Лебега}. Дана измеримая функция $f: X \ra \overline{\RR}$. Определим функции $f_+=\max\{f, 0\}$ и $f_- = \max\{-f, 0\}$. Тогда $f_+$и $f_-$ измеримы и неотрицательны. Мы уже умеем определять $\int f_+ d \mu$ и $\int f_- d \mu$. Если оба эти интеграла равны бесконечности, то определить $\int f d \mu$ мы не можем, в противном же случае положим $\int f d \mu = \int f_+ d \mu - \int f_- d \mu$ 
+\end{defn}
+\begin{defn}
+Функция $f$ называется \se{Суммируемая функция}{суммируемой}, если оба интеграла $\int f_+ d \mu$ и $\int f_- d \mu$ конечны или, что равносильно, конечен и $\int |f| d \mu$
+\end{defn}
+\begin{stat}
+\textbf{Свойства интеграла Лебега, в большей степени повторяющие то, что уже было написано ранее:} 
+\begin{itemize}
+    \item\textbf{ Монотонность: } $f_1 \leq f_2$ $\implies $ $\int f_1 d \mu \leq \int f_2 d \mu$
+    \item \textbf{Линейность для суммируемых функций:} Если $f_1$, $f_2$ - суммируемые функции, то $\int (f_1+f_2) d \mu = \int f_1 d \mu + \int f_2 d \mu$
+\end{itemize}
+\end{stat}
+\begin{theorem}
+\textbf{Теоремы о предельных переходах под знаком интеграла:}
+\begin{enumerate}
+    \item \textbf{Монотонный предельный переход} Пусть $(X, \Sigma, \mu)$ - пространство с мерой, $\{f_n\}$ - последовательность функций, $f_n \nearrow f$ почти всюду и  $\int_X f_1 d \mu < \infty$. Тогда существует $$\lim_{n \ra \infty} \int f_n d \mu = \int f d \mu$$
+    \item То же самое, только теперь $f_n \searrow f$.
+    \item \textbf{Лемма Фату} Пусть $(X, \Sigma, \mu)$ - пространство с мерой, $\{f_n\}$ - последовательность неотрицательных измеримых функций, и $\int \inf_{k \geq 1} f_k d \mu < \infty$. Тогда $$\liminf_{n \ra \infty} \int f_n d \mu \geq \int \liminf_{n \ra \infty} f_n d \mu$$
+    \item \se{Теорема о мажорируемой сходимости}{Теорема о мажорируемой сходимости} Пусть $(X, \Sigma, \mu)$ - пространство с мерой, $\{f_n\}$ - последовательность измеримых функций, почти всюду сходящаяся к $f$ (но, возможно, не монотонно). Предположим, есть суммируемая функция $g \geq 0$ такая, что $|f_n|<g$ и $|f|<g$. Тогда $$\int f_n d \mu \ra \int f d \mu$$ при $n \ra \infty$
+\end{enumerate}
+\end{theorem}
+\begin{proof}
+\
+\begin{enumerate}
+    \item Рассмотрим последовательность $g_n=f_n-f_1$. Это неотрицательные функции, монотонно возрастающие к $f-f_1$, а тогда по теореме Леви всё получается.
+    \item Рассмотрим последовательность $\{g_n\}$, $g_n=f-f_n$. Она монотонно возрастает (хоть все эти функции и отрицательны), и $\int g_1 d 
+\mu < \infty$, а тогда можно применить теорему о монотонной сходимости и получить, что $$\lim_{n \ra \infty} \int (f-f_n) d \mu = \int \lim_{n \ra \infty} (f-f_n) d \mu = \int (f-f) d \mu = 0$$
+    \item Определяем функции $g_i$, как в оригинальном доказательстве, а потом рассматриваем функции $h_i = g_i-g_1$ и применяем для них предыдущую версию леммы Фату.
+    \item Положим $h_n = |f_n-f|$ и будем доказывать, что $\int   h_n d \mu \underset{n \ra \infty}{\longrightarrow} 0$. Заметим, что написанный интеграл вообще существует, так как $h_n=|f_n-f|<2g$, а функция $g$ суммируема.
+    
+    Обозначим через $\tilde{h}_n = \sup_{j \geq n} h_j$. Верно неравенство $|\tilde{h}_n| \leq 2g$, и, как следствие, $\int \tilde{h}_n d \mu  < \infty$. Более того, последовательность $\{\tilde{h}_n(x)\}$ поточечно и почти всюду стремится к нулю. Значит, $\lim_{n \ra \infty} \int \tilde{h}_n d \mu = \int 0 d \mu = 0$. Но, разумеется, $0 \leq \lim_{n \ra \infty} |f_n-f| = \lim_{n \ra \infty} h_n \leq \lim_{n \ra \infty} \tilde{h}_n = 0$, откуда $\lim_{n \ra \infty} h_n = 0$, и мы получаем требуемое.
+\end{enumerate}
+\end{proof}
+\begin{remark}
+Без требования конечности $\int f_1 d \mu$ (или $\int f_k d \mu$ для некоторого $k$) утверждение пункта 2 становится неверным. Пример: $$f_n(x) = \begin{cases} 0 &\mbox{если } 0 \leq x \leq n \\ 
+1 & \mbox{если } x>n \end{cases}$$ Очевидно, что $\infty = \lim_{n \ra \infty} \int f_n d \mu \neq \int \lim_{n \ra \infty} f_n d \mu = 0$
+\end{remark}
+Пусть задана неотрицательная суммируемая функция $f$. Для любого $E \in \Sigma$
+можно определить $I_f(E) = \int_E f d \mu$. Легко проверить, что это $\sigma$-аддитивная мера.
+\\
+\begin{defn}
+Пусть $\mu$, $\nu$ - две меры на одной и той же $\sigma$-алгебре пространства $X$. Мы говорим, что $\nu$ - \se{Абсолютно непрерывная мера}{абсолютно непрервна} относительно $\mu$, если для любого $\epsilon > 0$ существует $\delta > 0$ такое, что из того, что $\mu(E)< \delta$ следует, что $\nu(E)<\epsilon$. В частности, из того, что $\mu(E)=0$, следует, что $\nu(E)=0$.
+\end{defn}
+\begin{stat}
+Если $\mu$ -  $\sigma$-конечная мера, то $I_f(E)$ абсолютно непрерывна относительно неё
+\end{stat}
+\begin{proof}
+Допустим, нет: существует $\epsilon>0$ такое, что для любого $\delta > 0$ есть множество $E_{\delta}$, $\mu\{E_{\delta}\}< \delta$ и $\int_{E_{\delta}} f d \mu > \epsilon$. Выберем последовательность $\{\delta_n\}$, $\delta_n = \frac{1}{2^n}$. Обозначим через $E_n$ множество, соответствующее $\delta_n$, т.е. такое, что $\mu(E_n)<\frac{1}{2^n}$ и $\int_{E_n} f d \mu > \epsilon$. Множества $\{E_n\}$ никак между собой не связаны, поэтому сделаем их монотонными: $\overline{E}_n = \bigcup_{k \geq n} E_k$. Из определения следует, что $\overline{E}_{k+1} \subset \overline{E}_k$, и $\chi_{\overline{E}_k} \searrow \chi_{\bigcap_k \overline{E}_n}$. Оценим меру множества $\overline{E}_n$:  $\mu(\overline{E}_n) \leq \sum_{k=n}^{\infty} \frac{1}{2^k} \underset{n \ra \infty}{\longrightarrow} 0$. Значит, $\mu(\bigcap_k \overline{E}_k) = 0$, и $\chi_{\bigcap_k \overline{E}_n} = 0$ почти всюду. Из всего вышесказанного следует, что $f \chi_{\overline{E}_n}$ монотонно убывает к $f \chi_{\bigcap_k \overline{E}_n} = 0$. Тогда можно поменять предел и интегрирование местами: $$\lim_{n \ra \infty} \int_{\overline{E}_n} f d \mu = \int_X \chi_{\overline{E}_n}f d \mu = \int_X \lim_{n \ra \infty} \chi_{\overline{E}_n}f d \mu = 0$$. С другой стороны, для любого $n$ есть неравенства $$\epsilon < \int_{E_n} f d \mu \leq \int_{\overline{E}_n} f d \mu$$
+Противоречие.
+\end{proof}
+\subsection{Теоремы Тонелли и Фубини}
+Пусть $(\GA, \Sigma, \mu)$ и $(\GB, \Delta, \nu)$ - пространства с мерами. Можно построить полукольцо $R = \GA \times \GB = \{X \times Y | X \in \GA, Y \in \GB\}$ и определить на нём $\sigma$-аддитивную меру $\mu \otimes \mu(X \times Y) = \mu(X)\nu(Y)$. По теореме Лебега-Каратеодори в $\GA \times \GB$ есть $\sigma$-алгебра $\Theta$ множеств, измеримых относительно $\mu \otimes \nu$.
+\begin{exl}
+Пусть $\GA=\RR^n$ с мерой Лебега $\lambda_n$, $\GB=\RR^m$ с мерой Лебега $\lambda_m$. В $\RR^{m+n}$ есть мера Лебега $\lambda_{m+n}$, которая, конечно, совпадает с $\lambda_n \otimes \lambda_m$
+\end{exl}
+Пусть $(\GA, \Sigma, \mu)$, $(\GB, \Delta, \nu)$ - пространства с мерами, $(\GA \times \GB, \Theta, \mu \otimes \nu)$ - их произведение. Если у нас есть функция $F(x, y): \GA \times \GB \ra \RR$, то она, с одной стороны, может быть измеримой относительно $\mu \otimes \nu$, а, с другой стороны, при фиксированном $x \in \GA$ быть измеримой относительно $\nu$. Хотелось бы понять, как все эти махинации связаны между собой.
+\begin{theorem}
+\se{Теорема Тонелли}{Теорема Тонелли} (пока что без доказательства)
+\\Пусть $F: \GA \times \GB \ra \RR$ - неотрицательная измеримая функция, меры $\mu$ и $\nu$ $\sigma$-конечны.
+Тогда "всё можно": 
+\begin{enumerate}
+\item При почти всех $x \in \GA$ функция $\phi_x(y)=F(x, y ): \GB \ra \RR$ измерима
+\item При почти всех $y \in \GB$ функция $\psi_y(x)=F(x, y ): \GA \ra \RR$ измерима
+\item $\Phi(x) = \int_{\GB} \phi_x(y) d \nu$ - измерима
+\item $\Psi(y) = \int_{\GA} \psi_y(x) d \mu$ - измерима
+\item $\int_{\GA} \Phi(x) d \mu = \int_{\GB} \Psi(y) d \nu = \int_{\GA \times \GB} F(x, y) d \mu \otimes \nu$
+Альтернативная запись: $$\int_{\GA} \Big ( \int_{\GB} F(x, y) d \nu \Big ) d \mu = \int_{\GB} \Big ( \int_{\GA} F(x, y) d \mu \Big ) d \nu = \int_{\GA \times \GB} F(x, y) d \mu \otimes \nu$$
+\end{enumerate}
+\end{theorem}
+\begin{theorem}
+\se{Теорема Фубини}{Теорема Фубини} 
+\\
+$F(x, y)$ - суммируемая (но уже, возможно, не положительная) относительно $\mu \otimes \nu$ функция. Тогда "всё можно"
+\end{theorem}
+\begin{proof}
+$F(x, y) = F_+(x, y)-F_-(x, y)$. К каждому слагаемому применим теперь теорему Тонелли.
+\end{proof}
+\subsection{Пространства суммируемых функций}
+Пусть $(\GA, \Sigma, \mu)$ - пространство с мерой. Как обычно, на всякий случай считаем меру $\sigma$-конечной.
+\begin{defn}
+$L^1(\GA, \Sigma, \mu) = \{f : \int_{\GA} |f| d \mu < \infty\}$. Хотелось бы определить норму $||f||_{L^1}:= \int_{\GA} |f| d \mu$, но вот незадача: норма может быть равна нулю, когда функция отлична от нуля на непустом множестве нулевой меры. Поэтому мы будем подразумевать, что наши функции определены с точностью до множества меры нуль, а, если быть точным, введём отношение эквивалентности $f \sim g \iff f-g=0$ почти везде, и будем подразумевать не сами функции, а их классы.
+\end{defn}
+\begin{exl}
+$L^1(\RR^n)$, $l^1 = L^1(\ZZ, \text{считающая мера})$, $L^1(0, 1)$ - функции, сумируемые на отрезке $[0, 1]$.
+\end{exl}
+\begin{stat}
+$L^1(0, 1)$ - нормированное пространство:
+\begin{enumerate}
+    \item $||f|| \geq 0$, $f=0 \iff ||f||=0$
+    \item $||\alpha f|| = |\alpha| \cdot ||f||$
+    \item $||f_1+f_2|| \leq ||f_1||+||f_2||$
+\end{enumerate}
+\end{stat}
+\begin{stat}
+$L^1(0, 1)$ - полное пространство: если $\{f_n\} \in L^1$ - последовательность Коши, то существует $f \in L^1$ такая, что $||f_n-f|| \ra 0$ при $n \ra \infty$ 
+\end{stat}
+\begin{proof}
+\begin{enumerate}
+    \item Строим кандидата на функцию $f$.
+    \\
+     Хочется рассмотреть ряд $f_1+(f_2-f_1)+(f_3-f_2)+...$. Если бы он сошёлся, то предельная функция нам бы подошла. К сожалению, он сходится не всегда. Но в силу того, что $\{f_n\}$ - последовательность Коши, можно выбрать подпоследовательность $\{f_{n_k}\}$ такую, что $||f_{n_k}-f_{n_{k+1}}||\leq \frac{1}{2^k}$. Так как $\sum ||f_{n_k}-f_{n_{k+1}}||<\infty$, мы можем переставить порядки сумирования и интегрирования: $\infty > \sum_k \int |f_{n_k}-f_{n_{k+1}}| d \mu = \int \sum_k |f_{n_k}-f_{n_{k+1}}| d \mu$. Значит, подынтегральный ряд сходится почти всюду. Определим $f(x) = \lim_{k \ra \infty} f_{n_k}(x)$.
+    \item Доказываем, что найденная функция подходит, т.е. что $||f_n-f|| \ra 0$ при $n \ra \infty$.
+    \\
+    Применим неравенство треугольника: $||f_n-f|| = ||f_n-f_{n_k}||+||f_{n_k}-f||$. Если $n$ и $k$ достаточно велики, то первая норма мала из-за того, что $\{f_n\}$ - последовательность Коши, а вторая норма мала, так как $\{f_{n_k}\}$ приближают $f$.
+\end{enumerate}
+\end{proof}
+Обозначим через $\GC_0(\RR)$ множество всех непрерывных функций из $\RR$ и $\RR$ с компактным носителем.
+\begin{stat}
+$\GC_0(\RR)$ плотно в $L^1(\RR)$
+\end{stat}
+\begin{proof}
+\
+\begin{itemize}
+    \item Для любой функции $f \in L^1(\RR)$ обозначим $$f_N(x) = \begin{cases} 0 &\mbox{если } |x|\geq N \\ 
+f(x) & \mbox{если } |x|<N \end{cases}$$ Все $f_N$ - функции с компактным носителем, и $||f-f_N|| = \int_N^{\infty} f d \mu \ra 0$ при $n \ra \infty$
+\item Мы умеем приближать $f_N^+$ и $f_N^-$, а, значит, и $f_N$, простыми функциями (которые тоже имеют компактный носитель), поэтому достаточно доказать утверждение лишь для них. А на самом деле даже только для характеристических, так как линейные комбинации последних - это и есть простые функции.
+\item Пусть $E$ - измеримое множество, являющееся подмножеством какого-то конечного интервала. Его можно покрыть дизъюнктным набором интервалов $\{I_k\}$ причём таким, что $\mu(\bigcup I_k \backslash E) < \epsilon$. Тогда $\chi_E$ приближается функцией $\sum_k \chi_{I_k}$, а характеристическая функция интервала уж точно приближается непрерывной функцией. 
+\end{itemize}
+\end{proof}
+\begin{remark}
+То же самое верно для функций из $\RR^n$
+\end{remark}
+\begin{cons}
+Пусть всё происходит на отрезке $[0, 1]$. Тогда любую измеримую функцию $f$ можно приблизить непрерывной. Но по теореме Вейерштрасса любую непрерывную функцию на $[0, 1]$ можно приблизить полиномом. Как следствие, любая измеримая функция на отрезке также приближается (по мере) полиномом.
+\end{cons}
+\begin{theorem} \se{Теорема Мюнца}{Теорема Мюнца}
+Рассмотрим последовательность функций $\{t^{\lambda_n}\}$, где $0=\lambda_0<\lambda_1 < \lambda_2 <...$. Следующие утверждения эквивалентны:
+\begin{enumerate}
+    \item Любую функцию $f \in C[0, 1]$ можно равномерно приблизить <<обобщёнными полиномами>> $\sum_{k=0}^N \alpha_k t^{\lambda_k}$
+    \item Ряд $\sum_{k=1}^{\infty} \frac{1}{\lambda_k}=\infty$
+\end{enumerate} 
+\end{theorem}
+\textbf{Общий случай:} Пусть $(\GA, \Sigma, \mu)$ - пространство с мерой, $\GA$ - топологическое пространство. Предположим, $\GA$ хаусдорфово, а мера $\mu$ регулярна (неформально говоря, любое множество $E$ можно <<снизу подпереть компактами>> и <<сверху подпереть открытыми множествами>>; формальное определение см. в начале конспекта). 
+\begin{stat}
+Непрерывные суммируемые функции плотны в $L^1(\GA, \Sigma, \mu)$
+\end{stat}
+Для доказательства потребуется
+\begin{lemma}
+\se{Лемма Урысона}{Лемма Урысона} Пусть $X$ - Хаусдорфово пространство, $K \subset G \subset X$, $K$ - компакт, $G$ - открытое. Тогда существует непрерывное отображение $f: X \ra [0, 1]$ такое, что $f_{\upharpoonright_K}=1$ и $f_{\upharpoonright_{X \backslash G}}=0$
+\end{lemma}
+\subsection{Свёртка}
+\begin{defn}
+Пусть $f, g \in L^1(\RR)$. Их \se{Свёртка функций}{свёрткой} называется функция $h(t)=(f*g)(t) = \int_{\RR} f(t-\tau)g(\tau) d \tau$. Очень похоже на умножение полиномов.
+\end{defn}
+\begin{stat}
+\textbf{Свойства свёртки: } \begin{enumerate}
+    \item \textbf{Коммутативность: }$f*g = g*f$
+    \item \textbf{Дистрибутивность: }  $f*(g_1+g_2)=f*g_1+f*g_2$
+    \item $||f*g|| \leq ||f|| \cdot ||g||$
+\end{enumerate}
+\end{stat}
+\begin{proof}
+\
+\begin{enumerate}
+    \item Очевидно из определения
+    \item Очевидно из определения
+    \item $||f*g|| = \int_{\RR} |\int_{\RR}f(t-\tau)g(\tau) d \tau | dt \leq \int_{\RR} \int_{\RR}|f(t-\tau)|\cdot |g(\tau)| d \tau  dt \overset{\text{ Тонелли}}{=}\int_{\RR} \int_{\RR}|f(t-\tau)|\cdot |g(\tau)| d t  d \tau = \int_{\RR} |g(\tau)| \int_{\RR}|f(t-\tau)|\cdot  d t  d \tau =||f|| \cdot ||g||$. Заметим, что заодно мы доказали существование свёртки.
+\end{enumerate}
+\end{proof}
+Вопрос: Как себя ведёт функция из $L^1$ при сдвиге?
+\begin{stat}
+$f \in L^1$, тогда $||f(t)-f(t+\tau)|| \underset{\tau \ra 0}{\longrightarrow} 0$
+\end{stat}
+\begin{proof}
+Если бы $f$ была непрерывной и имела компактный носитель, то утверждение бы следовало из теоремы Кантора о равномерной непрерывности.
+Пусть теперь $f \in L^1(\RR)$, $\epsilon>0$, хотим найти $\delta=\delta(\epsilon)$ такое, что при любом $\tau$, $|\tau|<\delta$, верно неравенство $||f(t)-f(t+\tau)||<\epsilon$. Мы уже знаем, что функцию $f$ можно приблизить непрерывной функцией с компактным носителем: $||g-f||<\frac{\epsilon}{3}$. Тогда $||f(t)-f(t+\tau)|| \leq ||f(t)-g(t)||+||g(t)-g(t+\tau)||+||g(t+\tau)-f(t+\tau)||$. Первое и третье слагаемые меньше, чем $\frac{\epsilon}{3}$, а второе слагаемое тоже будет маленьким, если $\tau$ достаточно мало (теорема Кантора о равномерной непрерывности).
+\end{proof}
+
+
+
+
+
+
+
+
 
 
 
